# pcass

./: .coveragerc  .gitignore  Makefile  NATIVE_PROTOCOL.md  PLAN.md  README.md  ScyllaCql.g  build-capture.bash  build-tracy.bash  build.zig  cassandra-3.0.yaml  cassandra-4.1.4.yaml  cassandra-varint.md  converter.py  cql_client.py  cql_server.py  cql_struct.py  cql_test.bash  cql_want.txt  cracking-the-code-md  debug.py  docker-compose.yml  dump.py  escaper.zig  export.py  got.lisp  greedy_range.py  hexdump.bash  import.py  internode-traffic-iddle-gossip.txt  main-got  main.zig  making_sense_of_ui_uring.zig  native_protocol_v5.spec  native_protocol_v5_notes.md  parse.bash  parse.py  parse_parallel.bash  parse_with_construct.py  populate_rows.cql  (+22 more)
.github/workflows/: makefile.yml
historical/: cassandra_3_0_varint.ksy  parse_with_kaitai.py  sstable-data-2.0.ksy
javaparser/: Dockerfile  parse.bash
sstable/: dump.py  dynamic_switch.py  import.py  positioned_construct.py  positioned_construct_test.py  sstable_data.py  sstable_decimal.py  sstable_statistics.py  string_encoded.py  type_parser.py  utils.py  uuid.py  varint.py  with_context.py
test_data/: me-1-big-Data.db  me-1-big-Statistics.db
test_data/cassandra3_data_want/: populate_test_schema.cql
test_data/cassandra3_data_want/sina_test/ascii_with_special_chars-47b1fe509c5311eebaee6d2c86545d91/: me-1-big-CRC.db  me-1-big-Data.db  me-1-big-Digest.crc32  me-1-big-Statistics.db
tests/: test_main.py  test_sstable.py  test_varint.py
(+540 files in other folders)
