[tool.poetry]
name = "commitlog-reader-zig"
version = "0.1.0"
description = ""
authors = ["Sina Siadat <siadat@gmail.com>"]
readme = "README.md"
packages = [{include = "commitlog_reader_zig"}]

[tool.poetry.dependencies]
python = "^3.10"
kaitaistruct = "^0.10"
pyyaml = "^6.0.1"
ipython = "^8.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
