[tool.poetry]
name = "pcass"
version = "0.1.0"
description = ""
authors = ["Sina Siadat <siadat@gmail.com>"]
readme = "README.md"
packages = [{include = "pcass"}]

[tool.poetry.dependencies]
python = "3.10.*"
pyyaml = "^6.0.1"
construct = "^2.10.69"
python-box = "^7.1.1"
lark = "^1.1.8"
cassandra-driver = "^3.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
